[gd_scene load_steps=3 format=3 uid="uid://r0usejbkxvci"]

[ext_resource type="Texture2D" uid="uid://c2vl3q33q5q17" path="res://UI/images.jpg" id="1_jksyy"]
[ext_resource type="Script" path="res://UI/placeable_towers_ui.gd" id="1_p6se4"]

[node name="PlaceableTowersUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6se4")

[node name="TextureBox" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.188235)
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_jksyy")
expand_mode = 1

[node name="BoxContainer" type="BoxContainer" parent="TextureBox"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -69.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureBox/BoxContainer"]
layout_mode = 2

[node name="Wall Button" type="Button" parent="TextureBox/BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(138, 138)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureBox/BoxContainer"]
layout_mode = 2

[node name="Tower1 Button" type="Button" parent="TextureBox/BoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(138, 138)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer3" type="VBoxContainer" parent="TextureBox/BoxContainer"]
layout_mode = 2

[node name="Tower2 Button" type="Button" parent="TextureBox/BoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(138, 138)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[connection signal="button_down" from="TextureBox/BoxContainer/VBoxContainer/Wall Button" to="." method="_on_wall_button_button_down"]
[connection signal="button_up" from="TextureBox/BoxContainer/VBoxContainer/Wall Button" to="." method="_on_wall_button_button_up"]
[connection signal="button_down" from="TextureBox/BoxContainer/VBoxContainer2/Tower1 Button" to="." method="_on_tower_1_button_button_down"]
[connection signal="button_up" from="TextureBox/BoxContainer/VBoxContainer2/Tower1 Button" to="." method="_on_tower_1_button_button_up"]
