extends Control


func _process(delta):
	pass
	
#Wall button
func _on_wall_button_button_down():
	print("Button down")
func _on_wall_button_button_up():
	print("Button up")

#Tower1 button
func _on_tower_1_button_button_down():
	print("Button down")
func _on_tower_1_button_button_up():
	print("Button up")
